@@ -36,7 +36,7 @@ llist_list		qlog;
 
 
 #ifdef QLOGSTAMP
-void qlog_add_timestamp(qlogentry *);
+void qlog_add_timestamp(qlogentry *data, char *buf, int size);
 #endif /* QLOGSTAMP */
 
 
@@ -79,6 +79,10 @@ qlog_check(void)
 void
 qlog_replay(connection_type *client, const int keep)
 {
+#ifdef QLOGSTAMP
+	char qlogbuf[IRC_MSGLEN];
+#endif /* QLOGSTAMP */
+	
 	qlog_drop_old();
 
 	/* Walk thru quicklog. */
@@ -86,10 +90,12 @@ qlog_replay(connection_type *client, const int keep)
 		if (client != NULL) {
 #ifdef QLOGSTAMP
 			if (cfg.timestamp != TS_NONE) {
-				qlog_add_timestamp(data);
+				qlog_add_timestamp(data, qlogbuf, IRC_MSGLEN);
+				irc_write(client, "%s", qlogbuf);
+			} else {
+				irc_write(client, "%s", data->text);
 			}
 #endif /* QLOGSTAMP */
-			irc_write(client, "%s", data->text);
 		}
 		if (! keep) {
 			xfree(data->text);
@@ -106,14 +112,18 @@ qlog_replay(connection_type *client, const int keep)
  * Add timestamp in qlogentry.
  */
 void
-qlog_add_timestamp(qlogentry *data)
+qlog_add_timestamp(qlogentry *data, char *buf, int size)
 {
 	int		i = -1;
 	int		len;
 	char		*p;
+	char		*t;
 /* TSLEN: "[HH:MM:SS] \0" == 12 */
 #define TSLEN	12
-	static char	temp[TSLEN];
+	char		stamp[TSLEN];
+
+	strncpy(buf, data->text, size);
+	buf[size - 1] = '\0';
 	
 	p = nextword(data->text);
 	/*
@@ -124,64 +134,83 @@ qlog_add_timestamp(qlogentry *data)
 		/* Next find out what command it was. */
 		i = pos(p, ' ');
 		if (i < TSLEN - 1) {
-			strncpy(temp, p, i);
-			temp[i] = '\0';
-			i = command_find(temp);
+			char tmp[16];
+			if (i > 16) {
+				return;
+			}
+			strncpy(tmp, p, i);
+			tmp[i] = '\0';
+			i = command_find(tmp);
+		} else {
+			return;
 		}
 	}
-	
+
 	/* Is this something we can handle? */
-	if (! (i == CMD_PRIVMSG
-				|| i == CMD_NOTICE
-				|| i == CMD_QUIT
-				|| i == CMD_PART
-				|| i == CMD_KICK
-				|| i == CMD_KILL)) {
+	if (i != CMD_PRIVMSG && i != CMD_NOTICE && i != CMD_QUIT &&
+			i != CMD_PART && i != CMD_KICK && i != CMD_KILL) {
 		return;
 	}
 
+	p = buf + (p - data->text); /* Skip first word as discovered before. */
+
 	/* Get place to insert timestamp. */
-	if (cfg.timestamp == TS_BEGINNING) {
-		p = strchr(p, (int) ':');
-		if (p != NULL) {
-			if (p[1] == '\0') {
-				p = NULL;
-			} else if (p[1] == '\1') {
-				p = strchr(p, (int) ' ');
+	switch (cfg.timestamp) {
+		case TS_BEGINNING:
+			p = strchr(p, (int) ':');
+			if (p != NULL) {
+				if (p[1] == '\0') {
+					p = NULL;
+				} else if (p[1] == '\1') {
+					p = strchr(p, (int) ' ');
+				}
 			}
-		}
-		/* Confused? Don't break already broken things any further. */
-		if (p == NULL) {
+			/*
+			 * Confused? Don't break already broken things any
+			 * further.
+			 */
+			if (p == NULL) {
+				return;
+			}
+			p++;
+			break;
+
+		case TS_END:
+			p = strchr(p, (int) ':');
+			if (p == NULL) {
+				return;
+			}
+			t = strrchr(p + 1, '\1');
+			if (t != NULL) {
+				p = t;
+			} else {
+				p = buf + strlen(buf);
+			}
+			break;
+
+		default:
+			/* Do nothing by default. Return, don't break. */
 			return;
-		}
-		p++;
-		strftime(temp, TSLEN, "[%H:%M:%S] ",
-				localtime(&data->timestamp));
-	} else if (cfg.timestamp == TS_END) {
-		char *t;
-		p = strchr(p, (int) ':');
-		if (p == NULL) {
-			return;
-		}
-		t = strrchr(p + 1, '\1');
-		if (t != NULL) {
-			p = t;
-		} else {
-			p = data->text + strlen(data->text);
-		}
-		strftime(temp, TSLEN, " [%H:%M:%S]",
-				localtime(&data->timestamp));
 	}
 	
 	/* Insert timestamp. */
-	i = (int) (p - data->text);
-	len = (int) strlen(data->text);
-	 /* TSLEN already has '\0' counted in. */
-	data->text = (char *) xrealloc(data->text, len + TSLEN);
-	p = data->text + i;
-	memmove(p + TSLEN - 1, p, len - (int) i + 1); /* Move '\0' as well. */
-	strncpy(p, temp, TSLEN - 1); /* Don't copy '\0'. */
-} /* void qlog_add_timestamp(qlogentry *data) */
+	i = (int) (p - buf);
+	len = (int) strlen(p);
+	memmove(p + TSLEN - 1, p, len); /* Move '\0' as well. */
+	switch (cfg.timestamp) {
+		case TS_BEGINNING:
+			strftime(stamp, TSLEN, "[%H:%M:%S] ",
+					localtime(&data->timestamp));
+			break;
+		case TS_END:
+			strftime(stamp, TSLEN, " [%H:%M:%S]",
+					localtime(&data->timestamp));
+			break;
+		default:
+			break;
+	}
+	memcpy(p, stamp, TSLEN - 1);
+} /* void qlog_add_timestamp(qlogentry *data, char *buf, int size) */
 #endif /* QLOGSTAMP */
 
 
